# zeroclaw

./: Cargo.toml
crates/lossless-context/: Cargo.toml
crates/lossless-context/src/: assembler.rs  compaction.rs  config.rs  engine.rs  large_files.rs  lib.rs  prompts.rs
crates/lossless-context/src/db/: connection.rs  schema.rs
crates/lossless-context/src/store/: conversation.rs  mod.rs  summary.rs
crates/lossless-context/src/tools/: lcm_describe.rs  lcm_expand_query.rs  lcm_grep.rs  mod.rs
src/agent/: agent.rs  context_engine.rs  lcm_context_engine.rs  mod.rs
src/channels/: mod.rs
src/config/: schema.rs
src/gateway/: ws.rs
src/tools/: lcm.rs  mod.rs
