[package]
name = "lossless-context"
version = "0.1.0"
edition = "2021"
description = "DAG-based Lossless Context Management for ZeroClaw"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rusqlite = { version = "0.37", features = ["bundled", "vtab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
